[metadata]
name = smart
version = 0.0.1
author = Yanchao Sun, Shuang Ma, Ratnesh Madaan, Rogerio Bonatti, Furong Huang, Ashish Kapoor
author_email = ycs@umd.edu, shuama@microsoft.com, ramadaan@microsoft.com
description = Code associated with SMART: Self-supervised Multi-task pretrAining with contRol Transformers (ICLR 2023)
long_description = file: README.md
url = https://github.com/microsoft/smart
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
